k8s/apps/monitoring/kuma/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
spec:
  selector:
    matchLabels:
      app: uptime
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: uptime
    spec:
      containers:
      - name: uptime
        image: louislam/uptime-kuma:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
          name: web-ui
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: web-ui
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: web-ui
          initialDelaySeconds: 30
          periodSeconds: 10
        #volumeMounts:
        #- name: data
        #  mountPath: /app/data
      #volumes:
      #- name: data
      #  persistentVolumeClaim:
      #    claimName: uptime-kuma
