k8s/apps/monitoring/kuma/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime
spec:
  selector:
    app: uptime
  ports:
  - name: web-ui
    protocol: TCP
    port: 3001
    targetPort: 3001
